chore: update dependencies to include expo-device and expo-notifications

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
     "expo": "~54.0.0",
+    "expo-device": "^8.0.10",
+    "expo-notifications": "^0.32.16",
     "expo-sqlite": "~16.0.10",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
