feat: implement OTA updates system with expo-updates
- Add automatic update checking on app launch
- Show alert dialog when updates are available
- Configure app.json for OTA updates
- Add download link badge in README
- Create detailed documentation in ATUALIZACOES.md

--- a/app.json
+++ b/app.json
@@ -28,6 +28,14 @@
     "web": {
       "favicon": "./assets/favicon.png"
     },
+    "updates": {
+      "enabled": true,
+      "checkAutomatically": "ON_LOAD",
+      "fallbackToCacheTimeout": 0
+    },
+    "runtimeVersion": {
+      "policy": "sdkVersion"
+    },
     "plugins": [
       "expo-sqlite"
     ]
