--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
     "expo": "~54.0.0",
+    "expo-asset": "~12.0.12",
     "expo-device": "^8.0.10",
     "expo-notifications": "^0.32.16",
     "expo-sqlite": "~16.0.10",
