--- a/app.json
+++ b/app.json
@@ -31,11 +31,10 @@
     "updates": {
       "enabled": true,
       "checkAutomatically": "ON_LOAD",
-      "fallbackToCacheTimeout": 0
+      "fallbackToCacheTimeout": 0,
+      "url": "https://u.expo.dev/50186f06-b4bd-440d-b995-36b150b320f1"
     },
-    "runtimeVersion": {
-      "policy": "sdkVersion"
-    },
+    "runtimeVersion": "1.0.5",
     "plugins": [
       "expo-sqlite",
       "expo-asset"
