--- a/.eas/workflows/build-android-production.yml
+++ b/.eas/workflows/build-android-production.yml
@@ -1,13 +1,9 @@
 name: Build Android Production APK
 
 on:
-  workflow_dispatch:
   push:
-    branches: ["main"]
-    paths-ignore:
-      - "**.md"
-      - "README.md"
-      - "ATUALIZACOES.md"
+    branches:
+      - main
 
 jobs:
   build_android:
