feat: adiciona botão verificar atualizações e debug para gráfico de categorias
- Adiciona botão "Verificar Atualizações" na aba Ajustes
- Implementa verificação manual de updates OTA
- Adiciona botão de debug no gráfico de categorias
- Inclui logs para diagnóstico de problemas com categorias

--- a/app.json
+++ b/app.json
@@ -31,7 +31,8 @@
     "updates": {
       "enabled": true,
       "checkAutomatically": "ON_LOAD",
-      "fallbackToCacheTimeout": 0
+      "fallbackToCacheTimeout": 0,
+      "url": "https://u.expo.dev/50186f06-b4bd-440d-b995-36b150b320f1"
     },
     "runtimeVersion": {
       "policy": "sdkVersion"
