feat: Implementar notificacoes, corrigir OTA updates e grafico de pizza
- Adiciona canal 'production' no eas.json para OTA updates funcionarem
- Implementa sistema de notificacoes com expo-notifications
- Adiciona lembrete diario as 20h
- Adiciona secao de notificacoes nas configuracoes
- Corrige timezone nas queries do banco (localtime)
- Adiciona plugin de notificacoes no app.json

--- a/app.json
+++ b/app.json
@@ -39,7 +39,14 @@
     },
     "plugins": [
       "expo-sqlite",
-      "expo-asset"
+      "expo-asset",
+      [
+        "expo-notifications",
+        {
+          "icon": "./assets/Money.png",
+          "color": "#4F46E5"
+        }
+      ]
     ],
     "extra": {
       "eas": {
